--- a/src/content/post/markdown-elements-demo-post.mdx
+++ b/src/content/post/markdown-elements-demo-post.mdx
@@ -2,13 +2,13 @@
 publishDate: 2023-01-02T00:00:00Z
 title: Markdown elements demo post
 description: Lorem ipsum dolor sit amet
-excerpt: Sint sit cillum pariatur eiusmod nulla pariatur ipsum. Sit laborum anim qui mollit tempor pariatur nisi minim dolor.
+excerpt: >-
+  Sint sit cillum pariatur eiusmod nulla pariatur ipsum. Sit laborum anim qui
+  mollit tempor pariatur nisi minim dolor.
 tags:
-  - markdown
   - blog
-  - Astro
+  - markdown
 ---
-
 import Logo from '~/components/Logo.astro';
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
